MFC r316542: bsdgrep: Handle special case of single-byte NUL pattern

PR:		202022
Approved by:	emaste (mentor, blanket MFC)

Former-commit-id: 7c47da1c93a74f2f4d62d16c27c8d2d3c03c09ca